force-app/main/default/objects/Activity/fields/Activity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Activity_Outcome__c</fullName>
    <description>Hold the Outcome of the task or activity as it is completed. Created by CK ext 115.</description>
    <label>Activity Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call: Busy</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Meeting: Scheduled</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>