force-app/main/default/objects/Activity/fields/Cadence_Id__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Id__c</fullName>
    <label>Cadence Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>