force-app/main/default/objects/Activity/fields/Call_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Category__c</fullName>
    <label>Call Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Navigation Call</fullName>
            </value>
            <value>
                <fullName>Scheduling Call</fullName>
            </value>
            <value>
                <fullName>Direct Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>