force-app/main/default/objects/Activity/fields/Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_End_Time__c</fullName>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>