force-app/main/default/objects/Activity/fields/Call_To__c.field-meta.xml
<CustomField>
    <fullName>Call_To__c</fullName>
    <label>Call To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>