force-app/main/default/objects/Activity/fields/Meeting_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Assigned_To__c</fullName>
    <label>Meeting Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>