force-app/main/default/objects/Activity/fields/Meeting_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_By__c</fullName>
    <label>Meeting Booked By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>