force-app/main/default/objects/Activity/fields/Meeting_Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Canceled_Date__c</fullName>
    <label>Meeting Canceled Date</label>
    <type>DateTime</type>
</CustomField>