force-app/main/default/objects/Activity/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>DateTime</type>
</CustomField>