force-app/main/default/objects/Activity/fields/Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Name__c</fullName>
    <label>Meeting Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>