force-app/main/default/objects/Activity/fields/Meeting_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recording_URL__c</fullName>
    <label>Meeting Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>