force-app/main/default/objects/Activity/fields/Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Time__c</fullName>
    <label>Meeting Start Time</label>
    <type>DateTime</type>
</CustomField>