force-app/main/default/objects/Activity/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default Personal Meeting</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Qualification Call</fullName>
            </value>
            <value>
                <fullName>eVisit Product Demo</fullName>
                <label>Product Demo</label>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Scoping Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>