force-app/main/default/objects/Activity/fields/Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Notes_Description__c</fullName>
    <label>Notes/Description</label>
    <type>TextArea</type>
</CustomField>