force-app/main/default/objects/Activity/fields/Step_ID__c.field-meta.xml
<CustomField>
    <fullName>Step_ID__c</fullName>
    <label>Step ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>